# platform-app-templates

./: .gitignore  README.md
shared/branding/: README.md  tokens.css
templates/: index.yaml
templates/go/http-api/: Dockerfile  README.md  go.mod  template.yaml
templates/go/http-api/.gitea/workflows/: ci.yaml
templates/go/http-api/app/: main.go
templates/go/http-api/helm/: Chart.yaml  values.yaml
templates/go/http-api/tests/: main_test.go
templates/python/example/: Dockerfile  Makefile  README.md  pyproject.toml  template.yaml
templates/python/example/.gitea/workflows/: build.yaml  publish.yaml
templates/python/example/app/: app.py
templates/python/example/app/static/: styles.css
templates/python/example/argocd/: apps.yaml
templates/python/example/helm/: Chart.yaml  values.yaml
templates/python/example/helm/templates/: certificate.yaml  deployment.yaml  ingress.yaml  middleware.yaml  service.yaml
templates/python/fastapi-api/: README.md  template.yaml
templates/python/fastapi-api/.gitea/workflows/: ci.yaml
templates/python/fastapi-api/app/: main.py
templates/python/fastapi-api/helm/templates/: deployment.yaml
templates/python/fastapi-api/tests/: test_main.py
templates/python/flask-landing/: Dockerfile  README.md  template.yaml
templates/python/flask-landing/app/: app.py
templates/python/flask-landing/argocd/: apps.yaml
templates/python/flask-landing/tests/: test_app.py
templates/react/spa/: Dockerfile  README.md  package.json  template.yaml
templates/react/spa/src/: App.jsx  styles.css
(+6 files in other folders)
