[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "__APP_NAME__"
version = "0.1.0"
description = "__APP_DESCRIPTION__"
authors = [{ name = "GlobalLogic Platform Engineering" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0,<4.0",
  "gunicorn>=21.2,<22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-flask>=1.3,<2.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]
